examples/test/testpolicy283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy283
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key2: value21
      key44: value29
      key4: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value42
          key33: value46
          key29: value2
      podSelector:
        matchLabels:
          key22: value40
